First google api test succeeded.