@@ -1,3 +1,20 @@
+/*
+ * Copyright (C) 2020 David Vidal Escudero - Free Open Source Software Consultancy
+ *
+ *       This program is free software: you can redistribute it and/or modify
+ *       it under the terms of the GNU General Public License as published by
+ *       the Free Software Foundation, either version 3 of the License, or
+ *       (at your option) any later version.
+ *
+ *       This program is distributed in the hope that it will be useful,
+ *       but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *       MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *       GNU General Public License for more details.
+ *
+ *       You should have received a copy of the GNU General Public License
+ *       along with this program.  If not, see <https://www.gnu.org/licenses/>.
+ */
+
 plugins {
     id 'java'
 }
@@ -21,4 +38,33 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    doFirst {
+        jvmArgs = [
+                '--module-path', classpath.asPath
+        ]
+    }
 }
+
+compileJava {
+    inputs.property("moduleName", "alexios.main")
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath
+        ]
+        classpath = files()
+    }
+}
+
+compileTestJava {
+    inputs.property("moduleName", "alexios.main")
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'org.junit.jupiter.api',
+                '--add-reads', "alexios.main=org.junit.jupiter.api",
+                '--patch-module', "alexios.main=" + files(sourceSets.test.java.srcDirs).asPath
+        ]
+        classpath = files()
+    }
+}
+
